# mecha-launcher

./: .gitignore  DESIGN.md  README.md  index.html  package-lock.json  package.json  revision.md  tsconfig.json  vite.config.js.map  vite.config.ts
.github/workflows/: release-alpha.yml
docs/: revision.md
minecraft-1.16.5-redux/: README.md  pack.json
minecraft-black-cat/source/: model.gltf
minecraft_player_model/: license.txt  scene.gltf
scripts/: run-frontend-tests.mjs
src/: App.svelte  app.css  main.js.map  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: auto_install_graphics_dependency.toml  auto_install_java.toml  check_graphics_dependency.toml  check_java_dependency.toml  delete_installed_version.toml  ensure_versions_dir.toml  get_system_memory_profile.toml  install_optifine_version.toml  install_vanilla_version.toml  list_optifine_install_options.toml  list_vanilla_releases.toml
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/launcher/: classpath.rs  discovery.rs  hash.rs  install.rs  java.rs  manifest.rs  mod.rs  natives.rs  process.rs  rules.rs
src-tauri/tests/: launcher_integration.rs
src/lib/: CatScene.svelte  PlayerScene.svelte  catalog.ts  i18n.ts  launcher-messages.ts  storage.js.map  storage.ts  tauri.js.map  tauri.ts  types.ts
src/lib/components/: DependencyBanner.svelte  LanguagePanel.svelte  LaunchStage.svelte  MemorySettingsPanel.svelte  MinecraftDirectoryPanel.svelte  OfflineProfilePanel.svelte  VersionCatalogPanel.svelte
