[package]
name = "mecha-launcher"
version = "0.1.0"
description = "Minimal offline Minecraft launcher"
authors = ["OpenAI Codex"]
license = "MIT"
edition = "2021"

[lib]
name = "mecha_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0.100"
regex = "1.12.2"
reqwest = { version = "0.12.24", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tauri = { version = "2.9.2", features = [] }
tauri-plugin-dialog = "2.4.2"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", default-features = false, features = ["sync"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
walkdir = "2.5.0"
zip = { version = "0.6.6", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3.23.0"
